--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -18,9 +18,9 @@
   "eat-kano": "吃掉小鹿乃",
   "default-dfjk": "默认为DFJK",
   "default-20s": "默认为20秒",
-  "game-title": "新概念音游",
-  "game-intro1": "从最底下的开始",
-  "game-intro2": "看你能得多少分",
+  "game-title": "陈通，我创死你！",
+  "game-intro1": "点击最下方陈通创死他",
+  "game-intro2": "看你能创死多少陈通",
   "record-rank": "用于纪录排行(特殊字符会被过滤)",
   "no-ad-bad-lang": "禁广告/脏话(本项可不填)",
   "time-up": "时间到",
@@ -31,19 +31,19 @@
   "home": "主页",
   "rank": "排行",
   "repo": "仓库",
-  "text-level-1": "试着好好练一下?",
-  "text-level-2": "TCL",
-  "text-level-3": "TQL",
-  "text-level-4": "您",
-  "text-level-5": "人?",
+  "text-level-1": "你行不行啊",
+  "text-level-2": "魏豪都比你强",
+  "text-level-3": "才创几个啊就不行了？",
+  "text-level-4": "就这？",
+  "text-level-5": "算陈通求你了，当个人吧",
   "time-over": "倒计时多了",
-  "rank-title": "吃掉小鹿乃-排行榜",
+  "rank-title": "创死苟陈通-排行榜",
   "query-record": "查询记录",
   "day-rank": "排行榜[日]",
   "week-rank": "排行榜[周]",
   "month-rank": "排行榜[月]",
   "all-rank": "排行榜[总]",
-  "navbar-brand": "吃掉小鹿乃-排行榜",
+  "navbar-brand": "创死苟陈通-排行榜",
   "daily-ranking": "日榜",
   "weekly-ranking": "周榜",
   "monthly-ranking": "月榜",
